<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"

    tools:context=".fragments.BmiFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/calculator"
            android:textSize="20dp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <!--first(age)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Age:"
            android:id="@+id/txtViewAge"
            android:layout_weight="1"
            android:gravity="center"/>
        <EditText
            android:id="@+id/editTxtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textStyle="italic"
            android:textSize="16dp"
            android:hint="@string/editTxtAgeHint"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>
    <!--second-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewWeight"
            android:id="@+id/txtViewWeight"
            android:textSize="16dp"
            android:layout_weight="1"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTxtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTxtWeightHint"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>
    <!--third-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewHeight"
            android:textSize="16dp"
            android:id="@+id/txtViewHeight"
            android:gravity="center"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTxtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textStyle="italic"
            android:textSize="16dp"
            android:hint="@string/editTxtHeightHint"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/btnCalcBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show BMI"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:text= "@string/txtViewResult" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/txtViewBmi"
                android:text= "Your BMI" />

            <TextView
                android:id="@+id/txtViewBmiRR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text=""
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtViewHealthR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txtViewHealthR"
                />
            <TextView
                android:id="@+id/txtViewHealthRR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text=""
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtViewBmiRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/txtViewBmiRange"
              />
            <TextView
                android:id="@+id/txtViewBmiRangeRR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text=""
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:text="@string/txtViewHealthWeight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewBMIS"
                    android:textStyle="bold"
                    android:id="@+id/txtViewBMIS"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="200dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtViewBMISResult"
                    android:text="@string/txtViewBMIResult"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewBelow"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewBelowResult"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewHealthy"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewHealthyResult"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewOverweigh"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewOverweightResult"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewAbove"
                    android:layout_weight="1"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtViewAboveResult"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="2dp"
        android:layout_margin="5dp"
        android:id="@+id/bmi_forYourInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="italic|bold"
                android:textSize="22dp"
                android:text="@string/showMeActivity"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnShowActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnShowActivity"
                app:srcCompat="@drawable/baseline_sports_martial_arts_24"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



</LinearLayout>