<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tab_layout"
    tools:context=".fragments.LoginTabFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/register"
            android:layout_marginBottom="15dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:id="@+id/loginEmail"
                android:layout_gravity="center"
                android:drawablePadding="8dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_custom_format"
                android:drawableLeft="@drawable/baseline_email_24"
                android:hint="@string/signupEmailHint"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:id="@+id/loginPassword"
                android:background="@drawable/edit_custom_format"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:hint="@string/signupPasswordHint"
                android:layout_marginBottom="15dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:id="@+id/btnLogin"
                android:text="@string/btnLogin"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>