<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_margin="15dp"
    android:id="@+id/card_fitness"
    tools:context=".fragments.CardFitnessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#11ab9e"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Activity"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Duration (in minutue): "
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalCalories"
            android:textStyle="bold|italic"
            android:text="Total Calories Burned:"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_marginTop="10dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="italic"
          android:textSize="16dp"
          android:text="@string/forYourInfo"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="italic|bold"
          android:textSize="16dp"
          android:background="@color/lightorange"
          android:id="@+id/txtViewKgBurned"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:text="@string/txtViewSave"
          android:textSize="16dp" />

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:id="@+id/btnSaveAndSubscribe"
          android:text="@string/btnSaveAndSubscribe"/>

  </LinearLayout>
</LinearLayout>